# gl-shape-renderer

./: CMakeLists.txt  Dockerfile
include/: shader.h
src/: main.cpp  shader.cpp
